[metadata]
name = udaq_decoder
version = 0.0.1
author = Martin Pittermann
author_email = martin.pittermann@student.kit.edu
description = Decode uDAQ data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/martin2250/udaq_decoder
project_urls =
    Bug Tracker = https://github.com/martin2250/udaq_decoder/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src